# RHICf_S

./: README.md  setenv.sh
analysis/: Makefile  analysis  analysis.cc
geometry/: FirstTime.sh  Geo.C  arm1.gdml  bbc.gdml  beamtest_arm1.gdml  beamtest_pos1.gdml  beamtest_pos2.gdml  beamtest_pos3.gdml  beamtest_pos4.gdml  beamtest_zdc.gdml  central.gdml  full_noarm1.gdml  full_nopipe_pos1.gdml  full_nopipe_pos2.gdml  full_nopipe_pos3.gdml  full_nopipe_pos4.gdml  full_pos1.gdml  full_pos2.gdml  full_pos3.gdml  full_pos4.gdml  pipe.gdml  pipe_nostructure.gdml  pipe_phenix.gdml  pipe_star.gdml  response_pos1.gdml  response_pos2.gdml  response_pos3.gdml  response_pos4.gdml  zdc.gdml
lib/: BBC.cpp  BBC.hpp  BBCContainer.cpp  BBCContainer.hpp  BBCParticle.cpp  BBCParticle.hpp  Central.cpp  Central.hpp  CentralContainer.cpp  CentralContainer.hpp  Flag.cpp  Flag.hpp  Forward.cpp  Forward.hpp  ForwardContainer.cpp  ForwardContainer.hpp  LinkDef.h  MCDataContainer.cpp  MCDataContainer.hpp  Makefile  RHICfParam.hpp  RHICfSimEvent.cpp  RHICfSimEvent.hpp  RecoDataContainer.cpp  RecoDataContainer.hpp  RomanPot.cpp  RomanPot.hpp  RomanPotContainer.cpp  RomanPotContainer.hpp  RunInfo.cpp  RunInfo.hpp  ZDCContainer.cpp  ZDCContainer.hpp  dict.cc  dict.h
plotTracks/: README  plot.C  rhicf.gdml
rhicf/: CMakeLists.txt  GNUmakefile  README  crmc.param  rhicf.cc
rhicf/include/: HepMCG4AsciiReader.hh  RHICfBBCHit.hh  RHICfBBCSD.hh  RHICfCentralHit.hh  RHICfCentralSD.hh  RHICfDetectorConstruction.hh  RHICfEventAction.hh  RHICfForwardHit.hh  RHICfForwardSD.hh  RHICfGSObarHit.hh  RHICfGSObarSD.hh  RHICfGSOplateHit.hh  RHICfGSOplateSD.hh  RHICfPrimaryGeneratorAction.hh  RHICfPrimaryGeneratorMessenger.hh  RHICfRunAction.hh  RHICfSMDHit.hh  RHICfSMDSD.hh  RHICfScinHit.hh  RHICfScinSD.hh  RHICfStackingAction.hh  RHICfSteppingAction.hh  RHICfTrackInformation.hh  RHICfTrackingAction.hh  RHICfTrajectory.hh  RHICfZDCHit.hh  RHICfZDCSD.hh
rhicf/src/: HepMCG4AsciiReader.cc  HepMCG4AsciiReaderMessenger.cc  RHICfBBCHit.cc  RHICfBBCSD.cc  RHICfCentralHit.cc  RHICfCentralSD.cc  RHICfDetectorConstruction.cc  RHICfEventAction.cc  RHICfExtraPhysics.cc  RHICfField.cc  RHICfForwardHit.cc  RHICfForwardSD.cc  RHICfGSObarSD.cc  RHICfGSOplateSD.cc  RHICfOpticalPhysics.cc  RHICfPhysicsList.cc  RHICfPrimaryGeneratorAction.cc  RHICfPrimaryGeneratorMessenger.cc  RHICfRunAction.cc  RHICfSMDSD.cc  RHICfScinHit.cc  RHICfScinSD.cc  RHICfStackingAction.cc  RHICfSteppingAction.cc  RHICfTrackInformation.cc  RHICfTrackingAction.cc  RHICfTrajectory.cc  RHICfZDCSD.cc
